welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:6: error: ';' expected but ')' found.
	          ((day==0 || day==6)&&vacation==false)){
                                                       ^